--- a/pom.xml
+++ b/pom.xml
@@ -7,10 +7,18 @@
   <packaging>jar</packaging>
   <name>nut</name>
   <url>http://maven.apache.org</url>
+
+  <!-- Add properties for environment variables -->
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.release>17</maven.compiler.release>
+
+    <!-- Default values for environment variables -->
+    <build.number>${env.BUILD_NUMBER}</build.number>
+    <job.name>${env.JOB_NAME}</job.name>
+    <git.commit>${env.GIT_COMMIT}</git.commit>
   </properties>
+
   <dependencies>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
@@ -35,8 +43,10 @@
       <version>2.23.1</version>
     </dependency>
   </dependencies>
+
   <build>
     <plugins>
+      <!-- Maven Compiler Plugin -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
@@ -45,6 +55,8 @@
           <release>17</release>
         </configuration>
       </plugin>
+
+      <!-- JaCoCo Plugin -->
       <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
@@ -65,6 +77,8 @@
           </execution>
         </executions>
       </plugin>
+
+      <!-- Maven Surefire Plugin -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
@@ -75,6 +89,8 @@
           </includes>
         </configuration>
       </plugin>
+
+      <!-- SonarQube Plugin -->
       <plugin>
         <groupId>org.sonarsource.scanner.maven</groupId>
         <artifactId>sonar-maven-plugin</artifactId>
