--- a/JenkinsFile
+++ b/JenkinsFile
@@ -7,6 +7,15 @@ pipeline {
                 git branch: 'main', url: 'https://github.com/BhanuAnusha/EclipsePushJenkins.git'
             }
         }
+        stage('Build') {
+            steps {
+                script {
+                    docker.image('openjdk:17-jdk').inside {
+                        sh 'mvn clean package'
+                    }
+                }
+            }
+        }
     }
 }
 
