--- a/JenkinsFile
+++ b/JenkinsFile
@@ -10,9 +10,11 @@ pipeline {
         stage('Build') {
             steps {
                 script {
-                    docker.image('openjdk:17-jdk').inside {
-                        sh 'mvn clean package'
-                    }
+					docker.withRegistry('https://registry.hub.docker.com') {
+                    	docker.image('openjdk:17-jdk').inside {
+                        	sh 'mvn clean package'
+                    	}
+                	}
                 }
             }
         }
