--- a/JenkinsFile
+++ b/JenkinsFile
@@ -11,7 +11,7 @@ pipeline {
             steps {
                 script {
                     docker.image('openjdk:17-jdk').inside {
-                       	sh 'java --version'
+                       	sh 'mvn clean package'
                     }
                 }
             }
